--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,10 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+    viewBinding {
+        enabled = true
+    }
+
 
     defaultConfig {
         applicationId "com.moduloTech.smarthome"
@@ -57,6 +61,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
 
     //Kotlin Coroutines
     def coroutines_android_version = '1.4.1'
