--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
-    id'dagger.hilt.android.plugin'
+    id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs'
+
 }
 
 android {
@@ -45,7 +47,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
-    implementation"com.google.android.material:material:1.4.0-alpha01"
+    implementation "com.google.android.material:material:1.4.0-alpha01"
 
     implementation 'androidx.recyclerview:recyclerview:1.2.0-beta02'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -66,6 +68,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
 
     //Kotlin Coroutines
     def coroutines_android_version = '1.4.1'
@@ -91,8 +94,8 @@ dependencies {
 
 
     // Preferences DataStore
-     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
-     implementation 'com.android.support:multidex:1.0.3'
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
+    implementation 'com.android.support:multidex:1.0.3'
 
 
 }
